Styling. Made over-floy-y auto on all containers. Header fixed on mobile.

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -19,6 +19,7 @@ text-transform: capitalize;
 font-size: 20px;
     cursor: pointer;
     height:59px
+        padding-top:22px;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
@@ -134,7 +135,7 @@ float:right;
 }
 
 header.carousel {
-    height: 100%;
+    height: 100vh;
     width:100%;
     
 }
@@ -162,6 +163,9 @@ header.carousel .fill {
 z-index: 1000;   
 }
 
+.container .about-row{
+        margin-top:13vh;
+}
 
 .dropdown.open{
  height:auto;   
@@ -181,9 +185,11 @@ z-index: 1000;
 
 html{
     height:100%;
+    
 }
 body{
     height:100%;
+    scroll-behavior: smooth;
 }
 
 .box {
@@ -247,6 +253,24 @@ div[class$='socialButtonBubbles']{
  float:right;
 }
 
+.menu-container{
+ overflow-y: auto;   
+    padding-top: 10vh;
+    padding-bottom:10vh;
+}
+
+.contact-container{
+ overflow-y: auto;   
+    padding-top: 10vh;
+    padding-bottom:10vh;
+    background-image: url('keyboard.jpg') !important;
+    background-size: 100% 100%;
+}
+
+.contact-container *{
+ color:#fff !important;   
+}
+
 #footer-contact-details{
  margin-top:5px;   
 }
@@ -260,11 +284,18 @@ div[class$='socialButtonBubbles']{
     
 }
 
+.panel{
+    background-color:transparent;
+}
+
+#CDSWIDSSP .widSSPData{
+ background-color:transparent !important;   
+}
+
 @media screen and (min-width:768px) {
     
     .container .row{
-        margin-top: 61px;
-            margin-bottom:61px;
+            
     }
     .brand {
         display: none;
@@ -418,12 +449,20 @@ border-bottom: 2px solid #302f31;
 color: #fff;
 }
 
+.navbar-default .container{
+ background-image:none;    
+}
+
 .about-section-first{
     font-family: Papyrus;/*'Droid Serif', serif; */
     margin-top: 20px;
 }
 
 nav.navbar.navbar-default {
+    position: fixed;
+top: 0;
+    z-index:1000;
+width: 100%;
 height: 61px;
     margin-bottom: 0;
     background-color: #e54d26;
